--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
 <html>
+    
+<head>
 
 <link rel="stylesheet" href="main.css">
 <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
@@ -24,7 +26,7 @@
 <h2>Places I went</h2>
 
 <p> I spent my summer in two different places, here in Greenville, South Carolina, and 
-    <a href=http://www.syracuse.com/>Syracuse, New York</a>. I spent most of my summer in South Carolina, and it was one for the
+    <b><a href=http://www.syracuse.com/>Syracuse, New York</a></b>. I spent most of my summer in South Carolina, and it was one for the
     books. I went to Myrtle Beach three different times this summer, Florence, and here in
     Greenville. Personally I wouldn't have went to Myrtle because I don't like the beach, but
     I went because of my family. I went to Florence because my JTT tennis team had the state
@@ -34,7 +36,7 @@
     to go there as much as possible because we only moved here to Greenville two years ago.
     The first time we went up there, we went to a couple of family graduation parties. It was
     really fun to see everyone and everyone was glad to see us and how we were doing. The 
-    second time we went up there was unexpected because my <a href=http://www.legacy.com/obituaries/name/sandra-perla-colagiovanni-obituary?pid=1000000186027496&view=guestbook>grandmother</a> had suddenly passed 
+    second time we went up there was unexpected because my <b><a href=http://www.legacy.com/obituaries/name/sandra-perla-colagiovanni-obituary?pid=1000000186027496&view=guestbook>grandmother</a></b> had suddenly passed 
     away. That was a really dark time for my family and we are glad that she is in a better 
     place. Overall, this summer definitely had it's ups and downs, but I wouldn't change it
     for the world. </p>
@@ -43,6 +45,7 @@
 
 <h2><b>By Gabby</b></h2>
 
+</head>
 </body>
 
 </html>
